--- a/time-tracker-fe/package.json
+++ b/time-tracker-fe/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tanstack/react-query": "^5.90.3",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "react": "^18.3.1",
